add experience block

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body>
         <section class="main-container">
-            <header>
+            <header class="flex-container">
                 <img src="media/avatar/karthik.png" alt="avatar" class="avatar" />
 
                 <div class="block">
@@ -23,35 +23,110 @@
 
                     <div>
                         <h1 class="bold">Karthik SR</h1>
-                        <h2 class="gray">UX/UI Designer</h2>
+                        <h2 class="gray-clr">UX/UI Designer</h2>
                     </div>
                 </div>
 
                 <div class="block flex">
                     <h1>Languages</h1>
 
-                    <!-- Используем CSS Grid для расположения элементов -->
                     <div class="languages-container">
-                        <!-- Английский -->
                         <div class="language-item">
                             <h3>English</h3>
-                            <div class="language-fill" style="--progress: var(--english);"></div>
+                            <div class="language-fill" style="--progress: var(--english)"></div>
                         </div>
 
-                        <!-- Малаялам -->
                         <div class="language-item">
                             <h3>Malayalam</h3>
-                            <div class="language-fill" style="--progress: var(--malayalam);"></div>
+                            <div class="language-fill" style="--progress: var(--malayalam)"></div>
                         </div>
 
-                        <!-- Хинди -->
                         <div class="language-item">
                             <h3>Hindi</h3>
-                            <div class="language-fill" style="--progress: var(--hindi);"></div>
+                            <div class="language-fill" style="--progress: var(--hindi)"></div>
                         </div>
                     </div>
                 </div>
             </header>
+
+            <section class="flex-container">
+                <div class="block experience-block">
+                    <h1>Experience</h1>
+
+                    <div class="accent-block experience-content">
+                        <h4>Jun. 2023 - Present</h4>
+
+                        <div class="text-container">
+                            <div class="title">
+                                <h3>Marketing Manager</h3>
+                                <p>Pankayam | Full-time</p>
+                            </div>
+
+                            <ul>
+                                <li>
+                                    Strategy development and planning of campaigns that promote the
+                                    business and generate genuine traffic
+                                </li>
+                                <li>SEO Content Creation for Blogs, Website, Social media</li>
+                            </ul>
+                        </div>
+
+                        <div class="float">
+                            <h4>most recent</h4>
+                        </div>
+                    </div>
+
+                    <div class="experience-content">
+                        <h4>2017 - Present</h4>
+
+                        <div class="text-container">
+                            <div class="title">
+                                <h3>Graphic / Web designer</h3>
+                                <p>Freelance</p>
+                            </div>
+
+                            <ul>
+                                <li>
+                                    Development of internal projects from scratch, product design of
+                                    brands
+                                </li>
+                                <li>Landing page, webapps and hybrid apps</li>
+                                <li>
+                                    Coordinating with outside agencies, art services, web designer,
+                                    marketing, printers, and colleagues as necessary.
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="experience-content">
+                        <h4>Sep. 2021 - Jun. 2023</h4>
+
+                        <div class="text-container">
+                            <div class="title">
+                                <h3>Legal Assistant</h3>
+                                <p>Law Firm | Intern</p>
+                            </div>
+
+                            <ul>
+                                <li>
+                                    Provide administrative support to lawyer and enhance office
+                                    effectiveness
+                                </li>
+                                <li>Handle communication with clients, witnesses etc.</li>
+                                <li>
+                                    repare case briefs and summarize depositions, interrogatories
+                                    and testimony
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="block tools-block">
+                    <h1>Tools</h1>
+                </div>
+            </section>
         </section>
     </body>
 </html>
