add footer content

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             </header>
 
             <section class="flex-container">
-                <div class="block experience-block">
+                <div class="block flex-block">
                     <h1>Experience</h1>
 
-                    <div class="accent-block experience-content">
+                    <div class="accent-block block-content">
                         <h4>Jun. 2023 - Present</h4>
 
                         <div class="text-container">
@@ -71,12 +71,12 @@
                             </ul>
                         </div>
 
-                        <div class="float">
+                        <div class="float text">
                             <h4>most recent</h4>
                         </div>
                     </div>
 
-                    <div class="experience-content">
+                    <div class="block-content">
                         <h4>2017 - Present</h4>
 
                         <div class="text-container">
@@ -99,7 +99,7 @@
                         </div>
                     </div>
 
-                    <div class="experience-content">
+                    <div class="block-content">
                         <h4>Sep. 2021 - Jun. 2023</h4>
 
                         <div class="text-container">
@@ -127,6 +127,89 @@
                     <h1>Tools</h1>
                 </div>
             </section>
+
+            <footer>
+                <div class="block flex-block">
+                    <h1>Education</h1>
+
+                    <div class="education-block">
+                        <div class="accent-block block-content">
+                            <h3>2023</h3>
+
+                            <div>
+                                <h3>UI/UX</h3>
+                                <p>#UX #UI #research #DesignSystem #Ui #wireframing #figma #Ux</p>
+                            </div>
+
+                            <p>Coursera</p>
+
+                            <div class="float heart">
+                                <svg
+                                    width="11"
+                                    height="11"
+                                    viewBox="0 0 11 11"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <path
+                                        d="M2.75 0.807373C1.99375 0.807373 1.32 1.12388 0.81125 1.61929C0.31625 2.1147 0 2.78901 0 3.55965C0 4.31653 0.31625 4.99083 0.81125 5.5L5.5 10.1926L10.1887 5.5C10.6838 5.0046 11 4.33029 11 3.55965C11 2.80277 10.6838 2.12847 10.1887 1.61929C9.69375 1.12388 9.02 0.807373 8.25 0.807373C7.49375 0.807373 6.82 1.12388 6.31125 1.61929C5.81625 2.1147 5.5 2.78901 5.5 3.55965C5.5 2.80277 5.18375 2.12847 4.68875 1.61929C4.19375 1.12388 3.52 0.807373 2.75 0.807373Z"
+                                        fill="#F6ED1E"
+                                    />
+                                </svg>
+                            </div>
+                        </div>
+
+                        <div class="block-content">
+                            <h3>2017 - 2022</h3>
+
+                            <div>
+                                <h3>Law</h3>
+                                <p class="second-accent-clr">
+                                    #law #legalStudies #contracts #internationalLaws
+                                </p>
+                            </div>
+
+                            <p>University of Kerala</p>
+                        </div>
+
+                        <div class="block-content">
+                            <h3>2017</h3>
+
+                            <div>
+                                <h3>Graphic design</h3>
+                                <p class="second-accent-clr">#branding #web #illustration #adobe</p>
+                            </div>
+
+                            <p>Coursrea</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="right-container">
+                    <div class="block flex-block">
+                        <h1>Interests</h1>
+
+                        <div class="tags-container">
+                            <div class="tag">branding</div>
+                            <div class="tag">design</div>
+                            <div class="tag">photography</div>
+                            <div class="tag">artificial intelligence</div>
+                            <div class="tag">illustration</div>
+                            <div class="tag">typography</div>
+                            <div class="tag">social networks</div>
+                            <div class="tag">research</div>
+                            <div class="tag">dron pilot</div>
+                            <div class="tag">games</div>
+                        </div>
+                    </div>
+
+                    <div class="block flex-block contact-block">
+                        <h1>Let´s chat! I´m ready to work on excinting projects</h1>
+
+                        <p>srkarthik.designscape@gmail.com</p>
+                    </div>
+                </div>
+            </footer>
         </section>
     </body>
 </html>
