add tools block

--- a/index.html
+++ b/index.html
@@ -123,8 +123,33 @@
                     </div>
                 </div>
 
-                <div class="block tools-block">
+                <div class="block flex-block tools-block">
                     <h1>Tools</h1>
+                    
+                    <div class="tools-container">
+                        <div class="float tool-float">design</div>
+                        <img src="media/design/figma.png" alt="figma">
+                        <img src="media/design/photoshop.png" alt="photoshop">
+                        <img src="media/design/illustrator.png" alt="illustrator">
+                        <img src="media/design/premiere.png" alt="premiere">
+                        <img src="media/design/notion.png" alt="notion">
+                        <img src="media/design/meet.png" alt="meet">
+                    </div>
+
+                    <div class="tools-container">
+                        <div class="float tool-float">no-code</div>
+                        <img src="media/no-code/zapier.png" alt="zapier">
+                        <img src="media/no-code/webflow.png" alt="webflow">
+                        <img src="media/no-code/framer.png" alt="framer">
+                        <img src="media/no-code/wordpress.png" alt="wordpress">
+                    </div>
+
+                    <div class="tools-container">
+                        <div class="float tool-float">artoficial intelligence</div>
+                        <img src="media/artoficial intelligence/chatGPT.png" alt="chatGPT">
+                        <img src="media/artoficial intelligence/copilot.png" alt="copilot">
+                        <img src="media/artoficial intelligence/midjourney.png" alt="midjourney">
+                    </div>
                 </div>
             </section>
 
