add download as pdf

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     </head>
 
     <body>
+        <button id="download-pdf" class="download-btn">Download as PDF</button>
+
         <section class="main-container">
             <header class="flex-container">
                 <img src="media/avatar/karthik.png" alt="avatar" class="avatar" />
@@ -125,30 +127,30 @@
 
                 <div class="block flex-block tools-block">
                     <h1>Tools</h1>
-                    
+
                     <div class="tools-container">
                         <div class="float tool-float">design</div>
-                        <img src="media/design/figma.png" alt="figma">
-                        <img src="media/design/photoshop.png" alt="photoshop">
-                        <img src="media/design/illustrator.png" alt="illustrator">
-                        <img src="media/design/premiere.png" alt="premiere">
-                        <img src="media/design/notion.png" alt="notion">
-                        <img src="media/design/meet.png" alt="meet">
+                        <img src="media/design/figma.png" alt="figma" />
+                        <img src="media/design/photoshop.png" alt="photoshop" />
+                        <img src="media/design/illustrator.png" alt="illustrator" />
+                        <img src="media/design/premiere.png" alt="premiere" />
+                        <img src="media/design/notion.png" alt="notion" />
+                        <img src="media/design/meet.png" alt="meet" />
                     </div>
 
                     <div class="tools-container">
                         <div class="float tool-float">no-code</div>
-                        <img src="media/no-code/zapier.png" alt="zapier">
-                        <img src="media/no-code/webflow.png" alt="webflow">
-                        <img src="media/no-code/framer.png" alt="framer">
-                        <img src="media/no-code/wordpress.png" alt="wordpress">
+                        <img src="media/no-code/zapier.png" alt="zapier" />
+                        <img src="media/no-code/webflow.png" alt="webflow" />
+                        <img src="media/no-code/framer.png" alt="framer" />
+                        <img src="media/no-code/wordpress.png" alt="wordpress" />
                     </div>
 
                     <div class="tools-container">
                         <div class="float tool-float">artoficial intelligence</div>
-                        <img src="media/artoficial intelligence/chatGPT.png" alt="chatGPT">
-                        <img src="media/artoficial intelligence/copilot.png" alt="copilot">
-                        <img src="media/artoficial intelligence/midjourney.png" alt="midjourney">
+                        <img src="media/artoficial intelligence/chatGPT.png" alt="chatGPT" />
+                        <img src="media/artoficial intelligence/copilot.png" alt="copilot" />
+                        <img src="media/artoficial intelligence/midjourney.png" alt="midjourney" />
                     </div>
                 </div>
             </section>
@@ -236,5 +238,11 @@
                 </div>
             </footer>
         </section>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+        <script src="script.js"></script>
+
+        <script src="editor.js"></script>
     </body>
 </html>
