finish all js logic

--- a/index.html
+++ b/index.html
@@ -12,124 +12,108 @@
             rel="stylesheet"
         />
     </head>
-
     <body>
-        <button id="download-pdf" class="download-btn">Download as PDF</button>
+        <button id="download-pdf" class="download-btn">Download PDF</button>
 
         <section class="main-container">
             <header class="flex-container">
                 <img src="media/avatar/karthik.png" alt="avatar" class="avatar" />
-
                 <div class="block">
-                    <h3>Hello 👋🏻 I’m</h3>
-
+                    <h3 class="editable">Hello 👋🏻 I’m</h3>
                     <div>
-                        <h1 class="bold">Karthik SR</h1>
-                        <h2 class="gray-clr">UX/UI Designer</h2>
+                        <h1 class="bold editable">Karthik SR</h1>
+                        <h2 class="gray-clr editable">UX/UI Designer</h2>
                     </div>
                 </div>
-
                 <div class="block flex">
-                    <h1>Languages</h1>
-
+                    <h1 class="editable">Languages</h1>
                     <div class="languages-container">
                         <div class="language-item">
-                            <h3>English</h3>
+                            <h3 class="editable">English</h3>
                             <div class="language-fill" style="--progress: var(--english)"></div>
                         </div>
-
                         <div class="language-item">
-                            <h3>Malayalam</h3>
+                            <h3 class="editable">Malayalam</h3>
                             <div class="language-fill" style="--progress: var(--malayalam)"></div>
                         </div>
-
                         <div class="language-item">
-                            <h3>Hindi</h3>
+                            <h3 class="editable">Hindi</h3>
                             <div class="language-fill" style="--progress: var(--hindi)"></div>
                         </div>
                     </div>
                 </div>
             </header>
-
             <section class="flex-container">
                 <div class="block flex-block">
-                    <h1>Experience</h1>
-
+                    <h1 class="editable">Experience</h1>
                     <div class="accent-block block-content">
-                        <h4>Jun. 2023 - Present</h4>
-
+                        <h4 class="editable">Jun. 2023 - Present</h4>
                         <div class="text-container">
                             <div class="title">
-                                <h3>Marketing Manager</h3>
-                                <p>Pankayam | Full-time</p>
+                                <h3 class="editable">Marketing Manager</h3>
+                                <p class="editable">Pankayam | Full-time</p>
                             </div>
-
                             <ul>
-                                <li>
+                                <li class="editable">
                                     Strategy development and planning of campaigns that promote the
                                     business and generate genuine traffic
                                 </li>
-                                <li>SEO Content Creation for Blogs, Website, Social media</li>
+                                <li class="editable">
+                                    SEO Content Creation for Blogs, Website, Social media
+                                </li>
                             </ul>
                         </div>
-
                         <div class="float text">
-                            <h4>most recent</h4>
+                            <h4 class="editable">most recent</h4>
                         </div>
                     </div>
-
                     <div class="block-content">
-                        <h4>2017 - Present</h4>
-
+                        <h4 class="editable">2017 - Present</h4>
                         <div class="text-container">
                             <div class="title">
-                                <h3>Graphic / Web designer</h3>
-                                <p>Freelance</p>
+                                <h3 class="editable">Graphic / Web designer</h3>
+                                <p class="editable">Freelance</p>
                             </div>
-
                             <ul>
-                                <li>
+                                <li class="editable">
                                     Development of internal projects from scratch, product design of
                                     brands
                                 </li>
-                                <li>Landing page, webapps and hybrid apps</li>
-                                <li>
+                                <li class="editable">Landing page, webapps and hybrid apps</li>
+                                <li class="editable">
                                     Coordinating with outside agencies, art services, web designer,
                                     marketing, printers, and colleagues as necessary.
                                 </li>
                             </ul>
                         </div>
                     </div>
-
                     <div class="block-content">
-                        <h4>Sep. 2021 - Jun. 2023</h4>
-
+                        <h4 class="editable">Sep. 2021 - Jun. 2023</h4>
                         <div class="text-container">
                             <div class="title">
-                                <h3>Legal Assistant</h3>
-                                <p>Law Firm | Intern</p>
+                                <h3 class="editable">Legal Assistant</h3>
+                                <p class="editable">Law Firm | Intern</p>
                             </div>
-
                             <ul>
-                                <li>
+                                <li class="editable">
                                     Provide administrative support to lawyer and enhance office
                                     effectiveness
                                 </li>
-                                <li>Handle communication with clients, witnesses etc.</li>
-                                <li>
-                                    repare case briefs and summarize depositions, interrogatories
+                                <li class="editable">
+                                    Handle communication with clients, witnesses etc.
+                                </li>
+                                <li class="editable">
+                                    Prepare case briefs and summarize depositions, interrogatories
                                     and testimony
                                 </li>
                             </ul>
                         </div>
                     </div>
                 </div>
-
                 <div class="block flex-block tools-block">
-                    <h1>Tools</h1>
-
+                    <h1 class="editable">Tools</h1>
                     <div class="tools-container">
-                        <div class="float tool-float">design</div>
+                        <div class="float tool-float editable">design</div>
                         <img src="media/design/figma.png" alt="figma" />
                         <img src="media/design/photoshop.png" alt="photoshop" />
                         <img src="media/design/illustrator.png" alt="illustrator" />
@@ -137,39 +121,34 @@
                         <img src="media/design/notion.png" alt="notion" />
                         <img src="media/design/meet.png" alt="meet" />
                     </div>
-
                     <div class="tools-container">
-                        <div class="float tool-float">no-code</div>
+                        <div class="float tool-float editable">no-code</div>
                         <img src="media/no-code/zapier.png" alt="zapier" />
                         <img src="media/no-code/webflow.png" alt="webflow" />
                         <img src="media/no-code/framer.png" alt="framer" />
                         <img src="media/no-code/wordpress.png" alt="wordpress" />
                     </div>
-
                     <div class="tools-container">
-                        <div class="float tool-float">artoficial intelligence</div>
+                        <div class="float tool-float editable">artoficial intelligence</div>
                         <img src="media/artoficial intelligence/chatGPT.png" alt="chatGPT" />
                         <img src="media/artoficial intelligence/copilot.png" alt="copilot" />
                         <img src="media/artoficial intelligence/midjourney.png" alt="midjourney" />
                     </div>
                 </div>
             </section>
-
             <footer>
                 <div class="block flex-block">
-                    <h1>Education</h1>
-
+                    <h1 class="editable">Education</h1>
                     <div class="education-block">
                         <div class="accent-block block-content">
-                            <h3>2023</h3>
-
+                            <h3 class="editable">2023</h3>
                             <div>
-                                <h3>UI/UX</h3>
-                                <p>#UX #UI #research #DesignSystem #Ui #wireframing #figma #Ux</p>
+                                <h3 class="editable">UI/UX</h3>
+                                <p class="editable">
+                                    #UX #UI #research #DesignSystem #Ui #wireframing #figma #Ux
+                                </p>
                             </div>
-
-                            <p>Coursera</p>
-
+                            <p class="editable">Coursera</p>
                             <div class="float heart">
                                 <svg
                                     width="11"
@@ -185,55 +164,45 @@
                                 </svg>
                             </div>
                         </div>
-
                         <div class="block-content">
-                            <h3>2017 - 2022</h3>
-
+                            <h3 class="editable">2017 - 2022</h3>
                             <div>
-                                <h3>Law</h3>
-                                <p class="second-accent-clr">
+                                <h3 class="editable">Law</h3>
+                                <p class="editable">
                                     #law #legalStudies #contracts #internationalLaws
                                 </p>
                             </div>
-
-                            <p>University of Kerala</p>
+                            <p class="editable">University of Kerala</p>
                         </div>
-
                         <div class="block-content">
-                            <h3>2017</h3>
-
+                            <h3 class="editable">2017</h3>
                             <div>
-                                <h3>Graphic design</h3>
-                                <p class="second-accent-clr">#branding #web #illustration #adobe</p>
+                                <h3 class="editable">Graphic design</h3>
+                                <p class="editable">#branding #web #illustration #adobe</p>
                             </div>
-
-                            <p>Coursrea</p>
+                            <p class="editable">Coursera</p>
                         </div>
                     </div>
                 </div>
-
                 <div class="right-container">
                     <div class="block flex-block">
-                        <h1>Interests</h1>
-
+                        <h1 class="editable">Interests</h1>
                         <div class="tags-container">
-                            <div class="tag">branding</div>
-                            <div class="tag">design</div>
-                            <div class="tag">photography</div>
-                            <div class="tag">artificial intelligence</div>
-                            <div class="tag">illustration</div>
-                            <div class="tag">typography</div>
-                            <div class="tag">social networks</div>
-                            <div class="tag">research</div>
-                            <div class="tag">dron pilot</div>
-                            <div class="tag">games</div>
+                            <div class="tag editable">branding</div>
+                            <div class="tag editable">design</div>
+                            <div class="tag editable">photography</div>
+                            <div class="tag editable">artificial intelligence</div>
+                            <div class="tag editable">illustration</div>
+                            <div class="tag editable">typography</div>
+                            <div class="tag editable">social networks</div>
+                            <div class="tag editable">research</div>
+                            <div class="tag editable">drone pilot</div>
+                            <div class="tag editable">games</div>
                         </div>
                     </div>
-
                     <div class="block flex-block contact-block">
-                        <h1>Let´s chat! I´m ready to work on excinting projects</h1>
-
-                        <p>srkarthik.designscape@gmail.com</p>
+                        <h1 class="editable">Let’s chat! I’m ready to work on exciting projects</h1>
+                        <p class="editable">srkarthik.designscape@gmail.com</p>
                     </div>
                 </div>
             </footer>
@@ -241,8 +210,8 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-        <script src="script.js"></script>
-
+        <script src="pdf.js"></script>
         <script src="editor.js"></script>
+        <script src="ripple.js"></script>
     </body>
 </html>
